--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -86,8 +86,10 @@
 
   &-members {
     display: grid;
-    row-gap: 30px;
     grid-template-columns: repeat(1, 1fr);
+
+    padding-top: 32px;
+    padding-bottom: 32px;
 
     .band-member {
       &-name {
@@ -103,7 +105,9 @@
 
         width: 60%;
 
-        margin: 0 auto;
+        margin-bottom: 16px;
+        margin-left: auto;
+        margin-right: auto;
 
         border-radius: 4px;
       }
