--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -188,7 +188,7 @@
     }
 
     .calendar-item:not(:last-child) {
-      border-bottom: 1px solid map-get($colors, background-1);
+      border-bottom: 1px solid #ccc;
     }
 
     .available {
