:sparkles: Implement Footer background image

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<the-band-header></the-band-header>
+<the-band-header />
 
 <div id="home" class="shows-carousel swiper">
   <div class="swiper-wrapper">
@@ -100,6 +100,8 @@
     </ul>
   </div>
 </div>
+
+<the-band-footer />
 
 <div id="myModal" class="modal" #modal>
   <div class="modal-content">
