:sparkles: Implement Loading Spinner

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -103,6 +103,8 @@
 
 <the-band-footer />
 
+<the-band-spinner [hidden]="!loading"/>
+
 <div id="myModal" class="modal" #modal>
   <div class="modal-content">
     <div class="modal-header">
