--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -49,6 +49,14 @@
 
         font-size: 15px;
       }
+
+      @include respond-to(xs) {
+        display: none;
+      }
+
+      @include respond-to(md) {
+        display: block;
+      }
     }
   }
 }
