--- a/src/styles.scss
+++ b/src/styles.scss
@@ -74,15 +74,29 @@ body {
   left: 0;
   top: 0;
 
-  // display: none;
+  display: none;
 
   width: 100%;
   height: 100%;
 
-  padding-top: 100px;
-
   background-color: rgb(0, 0, 0);
   background-color: rgba(0, 0, 0, 0.4);
+
+  @include respond-to(xs) {
+    padding-top: 50px;
+  }
+
+  @include respond-to(sm) {
+    padding-top: 50px;
+  }
+
+  @include respond-to(md) {
+    padding-top: 50px;
+  }
+
+  @include respond-to(lg) {
+    padding-top: 100px;
+  }
 }
 
 .modal-content {
