--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,3 +1,28 @@
-<div class="footer-image">
-  <img src="../../../assets/img/footer/footer-image.jpeg" alt="" />
-</div>
+<footer>
+  <div class="footer-image">
+    <img src="../../../assets/img/footer/footer-image.jpeg" alt="" />
+  </div>
+  <div class="footer-content">
+    <ul class="footer-content-socials">
+      <li>
+        <a href="#"><i class="bx bxl-facebook-square"></i></a>
+      </li>
+      <li>
+        <a href="#"><i class="bx bxl-instagram"></i></a>
+      </li>
+      <li>
+        <a href="#"><i class="bx bxl-snapchat"></i></a>
+      </li>
+      <li>
+        <a href="#"><i class="bx bxl-pinterest-alt"></i></a>
+      </li>
+      <li>
+        <a href="#"><i class="bx bxl-twitter"></i></a>
+      </li>
+      <li>
+        <a href="#"><i class="bx bxl-linkedin"></i></a>
+      </li>
+    </ul>
+    <p class="footer-content-copyright">Powered by <a href="#">w3.css</a></p>
+  </div>
+</footer>
