:sparkles: Implement Contact Form

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -18,10 +18,10 @@ $font-weights: (
 );
 
 $colors: (
-  background-0: #faf5ff,
+  background-0: #ffffff,
   background-1: #171717,
 
-  text-0: #faf5ff,
+  text-0: #ffffff,
   text-1: #171717,
 );
 
